fix: input-number wrapClass

--- a/style/web/components/input-number/_index.less
+++ b/style/web/components/input-number/_index.less
@@ -323,6 +323,6 @@
   text-align: right;
 }
 
-.@{prefix}-input-number__decrease + .@{prefix}-input {
+.@{prefix}-input-number__decrease + .@{prefix}-input__wrap {
   margin-left: @spacer-s;
 }
